--- a/card-display.html
+++ b/card-display.html
@@ -51,7 +51,7 @@
           </template>
           <template is="dom-if" if="{{isCard(card,'survey')}}">
             <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+              <h3 style="margin:0;padding:13px;height:168px;"><textfit-div text="{{card.title}}"></textfit-div></h3>
               <paper-button>Yes</paper-button>
               <paper-button>No</paper-button>
             </paper-material>
@@ -84,7 +84,7 @@
             </template>
             <template is="dom-if" if="{{isCard(card,'survey')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <h3 style="margin:0;padding:13px;height:168px;"><textfit-div text="{{card.title}}"></textfit-div></h3>
                 <paper-button>Yes</paper-button><paper-button>No</paper-button>
               </paper-material>
             </template>
@@ -111,7 +111,7 @@
             </template>
             <template is="dom-if" if="{{isCard(card,'survey')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <h3 style="margin:0;padding:13px;height:168px;"><textfit-div text="{{card.title}}"></textfit-div></h3>
               </paper-material>
             </template>
             <paper-fab mini icon="done"></paper-fab>
