--- a/card-display.html
+++ b/card-display.html
@@ -79,9 +79,9 @@
                 </template>
               </paper-material>
             </template>
-            <template is="dom-if" if="{{isCard(card,'survey')}}">
+            <template is="dom-if" if="{{isCard(card,'custom')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <div data-index="{{index}}" inner-h-t-m-l="{{GetHtml(card)}}"></div>
+                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
           </div>
@@ -177,7 +177,7 @@
       return !(card.url.split(":")[0] === "user")
     },
     isCard: function(card, isA){
-      if (isA === "survey") {
+      if (isA === "custom") {
         return (card.url.split(":")[0] === "custom")
       }
       if (isA === "card") {
@@ -232,7 +232,7 @@
       } else if (e.target.hasOwnProperty("dataIndex")) {
         selected = e.target.dataIndex
       } 
-      this.fire("tapped", {selected:selected, text: e.target.innerText})
+      this.fire("tapped", {selected:selected, text: e.target.innerText, target: e.target})
     }
   })
 </script>
