--- a/card-display.html
+++ b/card-display.html
@@ -29,30 +29,29 @@
     <template is="dom-if" if="{{veiwable}}" restamp>
       <template is="dom-repeat" items="{{cards}}" observe="title data">
         <template is="dom-bind">
-          <update-data data="{{getCard(item.url, lookup)}}" update="{{card}}" wait="0" ></update-data> 
           <div style="max-width:45%;float:left;heigth:250px" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <div style="margin: 5px 0" on-tap="openDeck" data-index="{{index}}">
-                <card-deck title="{{card.title}}" style="max-width:95%;width:200px;height:240px;margin:12px 7px"></card-deck>
+                <card-deck title="{{item.title}}" style="max-width:95%;width:200px;height:240px;margin:12px 7px"></card-deck>
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <template is="dom-if" if="{{cardHasLink(card)}}">
-                  <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
-                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
-                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
+                <template is="dom-if" if="{{cardHasLink(getCard(item.url, lookup))}}">
+                  <a href="{{getCard(item.url, lookup).url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{getCard(item.url, lookup).image}});background-repeat: no-repeat;"></div></a><br />
+                  <a href="{{getCard(item.url, lookup).url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
+                  <a href="{{getCard(item.url, lookup).url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
                 </template>
-                <template is="dom-if" if="{{!cardHasLink(card)}}">
-                  <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
+                <template is="dom-if" if="{{!cardHasLink(getCard(item.url, lookup))}}">
+                  <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{getCard(item.url, lookup).image}});background-repeat: no-repeat;"></div><br />
                   <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
                   <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
                 </template>
               </paper-material>
             </template>
-            <template is="dom-if" if="{{isCard(card,'custom')}}">
+            <template is="dom-if" if="{{isCard(getCard(item.url, lookup),'custom')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
+                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(getCard(item.url, lookup))}}"></div>
               </paper-material>
             </template>
           </div>
