--- a/card-display.html
+++ b/card-display.html
@@ -159,7 +159,7 @@
       pickable: {type: Boolean, value: false},
       veiwable: {type: Boolean, computed:"getVeiwable(selectable, pickable, sortable)"}
     },
-    getCard(index, cards){
+    getCard: function(index, cards){
       return cards[index]
     },
     getHtml: function(card) {
