--- a/card-display.html
+++ b/card-display.html
@@ -36,22 +36,24 @@
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
             <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <template is="dom-if" if="{{cardHasLink(getCard(card.url, lookup))}}">
-                <a href="{{getCard(card.url, lookup).url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{getCard(card.url, lookup).image}});background-repeat: no-repeat;"></div></a><br />
-                <a href="{{getCard(card.url, lookup).url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
-                <a href="{{getCard(card.url, lookup).url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
+              <template is="dom-if" if="{{cardHasLink(card)}}">
+                <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
+                <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
+                <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
               </template>
-              <template is="dom-if" if="{{!cardHasLink(getCard(card.url, lookup))}}">
-                <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{getCard(card.url, lookup).image}});background-repeat: no-repeat;"></div><br />
+              <template is="dom-if" if="{{!cardHasLink(card)}}">
+                <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                 <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
                 <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </template>
             </paper-material>
           </template>
-          <template is="dom-if" if="{{isCard(getCard(card.url, lookup),'custom')}}">
-            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-              <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(getCard(card.url, lookup))}}"></div>
-            </paper-material>
+          <template is="dom-if" if="{{isCard(card,'custom')}}">
+            <template is="dom-if" if="{{!getCard(card.url, lookup).hidden}}">
+              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(getCard(card.url, lookup))}}"></div>
+              </paper-material>
+            </template>
           </template>
         </div>
       </template>
