--- a/card-display.html
+++ b/card-display.html
@@ -49,9 +49,9 @@
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <template is="dom-if" if="{{!getCard(card.url, lookup).hidden}}">
+            <template is="dom-if" if="{{!getCardAttr(card.url, lookup, 'hidden')}}">
               <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
-                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(getCard(card.url, lookup))}}"></div>
+                <div data-index="{{index}}" inner-h-t-m-l="{{getCardAttr(card.url, lookup, "html")}}"></div>
               </paper-material>
             </template>
           </template>
