--- a/card-display.html
+++ b/card-display.html
@@ -166,6 +166,8 @@
     getCardAttr: function(index, cards, attr){
       if (attr === "html") {
         return this.getHtml(cards[index])
+      } else if (attr === "hidden") {
+        return this.getHtml(cards[index])
       } else {
         return cards[index][attr]
       }
