--- a/card-display.html
+++ b/card-display.html
@@ -143,7 +143,7 @@
     </template>
     <paper-dialog id="dialDeck">
       <template is="dom-if" if="{{deck}}" restamp>
-        <card-display cards="{{deck}}"></card-display>
+        <card-display cards="{{deck}}" lookup="{{lookup}}"></card-display>
       </template>
     </paper-dialog>  
   </template>
