--- a/card-display.html
+++ b/card-display.html
@@ -35,22 +35,34 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+            <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
               <template is="dom-if" if="{{cardHasLink(card)}}">
                 <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
-                <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
+                <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3></a>
                 <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
               </template>
               <template is="dom-if" if="{{!cardHasLink(card)}}">
                 <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3>
                 <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </template>
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
             <template is="dom-if" if="{{!getCardAttr(card.url, lookup, 'hidden')}}">
-              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getCardAttr(card.url, lookup, 'html')}}"></div>
               </paper-material>
             </template>
@@ -68,21 +80,33 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
                 <template is="dom-if" if="{{cardHasLink(card)}}">
                   <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
-                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0; padding: 13px;">{{card.title}}</h3></a>
+                  <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3></a>
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><p style="margin: 0; padding: 0 13px;">{{card.data}}</p></a>
                 </template>
                 <template is="dom-if" if="{{!cardHasLink(card)}}">
                   <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-                  <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                  <h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3>
                   <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
                 </template>
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
@@ -101,14 +125,26 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
                 <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
-                <h3 style="margin: 0; padding: 13px;">{{card.title}}</h3>
+                <h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3>
                 <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+              <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
@@ -126,14 +162,26 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+            <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
               <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
               <h3 style="margin: 0;padding: 13px;">{{card.title}}</h3>
               <p style="margin: 0;padding: 0 13px;">{{card.data}}</p>
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <paper-material elevation="4" style="max-width:95%;margin:12px 7px;background:#fff;display:inline-block;width:200px;height:250px">
+            <paper-material elevation="4" style="    max-width: 95%;
+    margin: 12px 7px;
+    background: #fff;
+    display: inline-block;
+    width: 190px;
+    height: 235px;
+    padding-top: 20px">
               <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
             </paper-material>
           </template>
