--- a/card-display.html
+++ b/card-display.html
@@ -56,7 +56,7 @@
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
             <template is="dom-if" if="{{!getCardAttr(card.url, lookup, 'hidden')}}">
-              <paper-material elevation="4" style="    max-width: 95%;
+              <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -80,7 +80,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="    max-width: 95%;
+              <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -100,7 +100,7 @@
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="    max-width: 95%;
+              <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -125,7 +125,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="    max-width: 95%;
+              <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -138,7 +138,7 @@
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="    max-width: 95%;
+              <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -162,7 +162,7 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="    max-width: 95%;
+            <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
@@ -175,7 +175,7 @@
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <paper-material elevation="4" style="    max-width: 95%;
+            <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
