--- a/card-display.html
+++ b/card-display.html
@@ -35,7 +35,7 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="    max-width: 95%;
+            <paper-material elevation="4" style="
     margin: 12px 7px;
     background: #fff;
     display: inline-block;
