--- a/card-display.html
+++ b/card-display.html
@@ -35,13 +35,7 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+            <paper-material elevation="4" style="margin: 12px 7px;background: #fff;display: inline-block;width: 190px;height: 235px;padding-top: 20px">
               <template is="dom-if" if="{{cardHasLink(card)}}">
                 <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
                 <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3></a>
@@ -56,13 +50,7 @@
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
             <template is="dom-if" if="!{{getCardAttr(card.url, lookup, 'hidden')}}">
-              <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+              <paper-material elevation="4" style="margin: 12px 7px;background: #fff;display: inline-block;width: 190px;height: 235px;padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getCardAttr(card.url, lookup, 'html')}}"></div>
               </paper-material>
             </template>
