--- a/card-display.html
+++ b/card-display.html
@@ -49,7 +49,7 @@
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <template is="dom-if" if="!{{getCardAttr(card, lookup, 'hidden')}}">
+            <template is="dom-if" if="{{!getCardAttr(card, lookup, 'hidden')}}">
               <paper-material elevation="4" style="margin: 12px 7px;background: #fff;display: inline-block;width: 190px;height: 235px;padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getCardAttr(card, lookup, 'html')}}"></div>
               </paper-material>
