--- a/card-display.html
+++ b/card-display.html
@@ -68,13 +68,7 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
                 <template is="dom-if" if="{{cardHasLink(card)}}">
                   <a href="{{card.url}}" target="_blank" style="text-decoration: initial;color: black"><div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div></a><br />
                   <a href="{{card.url}}" style="text-decoration: initial;color: black"><h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3></a>
@@ -88,20 +82,13 @@
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
           </div>
         </template>
       </sortable-list>
-      <update-data update="{{cards}}" data="{{sortMe}}"></update-data>
     </template>
     <template is="dom-if" if="{{selectable}}" restamp>
       <iron-selector multi selected-values="{{selected}}">
@@ -113,26 +100,14 @@
               </div>
             </template>
             <template is="dom-if" if="{{isCard(card,'card')}}">
-              <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
                 <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
                 <h3 style="margin: 0px; padding: 10px; font-size: 17px;">{{card.title}}</h3>
                 <p style="margin: 0; padding: 0 13px;">{{card.data}}</p>
               </paper-material>
             </template>
             <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+              <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
                 <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
               </paper-material>
             </template>
@@ -150,26 +125,14 @@
             </div>
           </template>
           <template is="dom-if" if="{{isCard(card,'card')}}">
-            <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+            <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
               <div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{card.image}});background-repeat: no-repeat;"></div><br />
               <h3 style="margin: 0;padding: 13px;">{{card.title}}</h3>
               <p style="margin: 0;padding: 0 13px;">{{card.data}}</p>
             </paper-material>
           </template>
           <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <paper-material elevation="4" style="
-    margin: 12px 7px;
-    background: #fff;
-    display: inline-block;
-    width: 190px;
-    height: 235px;
-    padding-top: 20px">
+            <paper-material elevation="4" style=" margin: 12px 7px; background: #fff; display: inline-block; width: 190px; height: 235px; padding-top: 20px">
               <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
             </paper-material>
           </template>
