--- a/card-display.html
+++ b/card-display.html
@@ -260,3 +260,4 @@
       this.fire("tapped", {card: this.cards[selected], text: e.target.innerText, tag: e.target.tagName})
     }
   })
+</script>
