--- a/card-display.html
+++ b/card-display.html
@@ -132,8 +132,12 @@
       }
     },
     getHtml: function(card) {
-      var output = card.data + " "
-      
+      var output = ""
+      if (card.data) {
+        output = card.data + ""
+      } else {
+        output = '<div style="max-width:100%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px;background-image:url({{image}});background-repeat:no-repeat"></div><br><h3 style="margin:0px;padding:10px;font-size: 17px;">{{title}}</h3>'
+      }
       for (var attr in card) {
         if (attr !== "data") {
           //replace {{}}
