put back fab select

--- a/card-display.html
+++ b/card-display.html
@@ -21,9 +21,9 @@
         background: gray;
         margin: -150px 88px;
       }
-      /*.iron-selected paper-fab {
+      .iron-selected paper-fab {
         background: red;
-      }*/
+      }
       .cardstyle {
         margin: 12px 7px; 
         background: #fff; 
