--- a/card-display.html
+++ b/card-display.html
@@ -71,7 +71,7 @@
         <template id="cardsS" is="dom-repeat" items="{{sortMe}}" as="card" observe="title data">
           <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
             <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div class="cardtitlecontainer>
+              <div class="cardtitlecontainer">
                 <card-deck title="{{card.title}}" class="cardtitlestyle"></card-deck>
               </div>
             </template>
