overlow on paper-material

--- a/card-display.html
+++ b/card-display.html
@@ -60,6 +60,9 @@
         background: none;
         box-shadow: none;
       }
+      paper-material {
+        overflow: hidden;
+      }
 
     </style>
     
