added float left

--- a/card-display.html
+++ b/card-display.html
@@ -40,7 +40,7 @@
       }
       .cardcontainer {
         /*max-width:100%;*/
-        /*float:left;*/
+        float:left;
         display: inline;
       }
       /*.cardtitlecontainer {
