some style changes

--- a/card-display.html
+++ b/card-display.html
@@ -20,6 +20,7 @@
         position: absolute;
         background: gray;
         margin: -150px 88px;
+        color: var(--button-background-color);
       }
       .iron-selected paper-fab {
         background: var(--accent-color);
