--- a/card-display.html
+++ b/card-display.html
@@ -201,11 +201,8 @@
       }
       return !(selectable || pickable || sortable)
     },
-    cardHasLink: function(card) {
-      return !(card.url.split(":")[0] === "user")
-    },
     isCard: function(card, isA){
-      if (isA === "deck") {
+      if (isA === "deck" && card.hasOwnProperty("url")) {
         return card.url.split(":")[0] === "deck"
       } else {
         return card.url.split(":")[0] !== "deck"
