--- a/card-display.html
+++ b/card-display.html
@@ -25,28 +25,13 @@
       .iron-selected paper-fab {
         background: var(--accent-color);
       }
-      .cardstyle {
-        margin: 12px 7px; 
-        background: #fff; 
-        display: inline-block;
-        width: 165px; 
-        height: 225px; 
-        padding-top: 20px
-      }
-      .deck {
-        /*max-width:95%;*/
-        /*width:200px;*/
-        /*height:240px;*/
-        margin:12px 7px;
-      }
       .cardcontainer {
-        /*max-width:100%;*/
-        float:left;
-        display: inline;
+        float: left;
+        display: block;
+        height: 220px;
+        width: 167px;
+        margin: 6px;
       }
-      /*.cardtitlecontainer {
-        margin: 5px 0;
-      }*/
       #deckbutton {
         float: left;
         width: 100%;
@@ -62,8 +47,12 @@
         box-shadow: none;
       }
       paper-material {
-        overflow: hidden;
+
+        width: 100%;
+        height: 100%;
+        background: #fff;
       }
+
 
     </style>
     
