--- a/card-display.html
+++ b/card-display.html
@@ -14,7 +14,7 @@
 <dom-module id="card-display">
   <template>
     <style>
-      paper-fab {position: absolute;background: gray;margin: -150px 88px;color: var(--button-background-color)}
+      paper-fab {position: absolute;background: gray;margin: -47px 0;color: var(--button-background-color)}
       .iron-selected paper-fab {background: var(--accent-color)}
       .cardcontainer {float: left;display: block;height: 220px;width: 167px;margin: 6px}
       #deckbutton {float: left;width: 100%}
