--- a/card-display.html
+++ b/card-display.html
@@ -31,7 +31,7 @@
         display: block;
         height: 220px;
         width: 167px;
-        margin: 6px;
+        margin: 0px 6px 30px 0px;
       }
       #deckbutton {
         float: left;
@@ -48,7 +48,6 @@
         box-shadow: none;
       }
       paper-material {
-
         width: 100%;
         height: 100%;
         background: #fff;
