--- a/card-display.html
+++ b/card-display.html
@@ -158,7 +158,13 @@
       if (attr === "html") {
         return this.getHtml(card)
       } else if (attr === "hidden") {
-        return !!card.hidden
+        
+        if (card.hasOwnProperty("Question") && card.url === this.hash(this.uid + card.Question)) {
+          return false
+        } else {
+          return !!card.hidden
+        }
+        
       } else {
         return card[attr]
       }
